fixed masthead spacing, replaced illustration with one without padding, fixed logo

--- a/app/styles/base/_global.scss
+++ b/app/styles/base/_global.scss
@@ -14,3 +14,7 @@ textarea {
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;   
 }
+
+body {
+	padding-top: 82px;
+}
