--- a/app/styles/components/_colors.scss
+++ b/app/styles/components/_colors.scss
@@ -19,6 +19,10 @@
 	background-color: $wetAsphalt;
 }
 
+.white-bg {
+	background-color: $white;
+}
+
 // text colors
 
 .white-text {
