--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -25,6 +25,9 @@ $transparentWhite: rgba(255,255,255,.95);
     #Bootstrap Overrides
 \*------------------------------------*/
 
+// body
+$body-bg: $wetAsphalt;
+
 // fonts
 $font-family-sans-serif: 'effra', Helvetica, Arial, sans-serif;
 
