--- a/app/styles/layout/_grid.scss
+++ b/app/styles/layout/_grid.scss
@@ -3,5 +3,6 @@
 \*------------------------------------*/
 
 section {
+	padding: rem(80) 0;
 	overflow: hidden;
 }
