--- a/app/styles/sections/_intro.scss
+++ b/app/styles/sections/_intro.scss
@@ -1,22 +1,21 @@
 /*------------------------------------*\
     #Intro Styles
 \*------------------------------------*/
+
 #intro {
-	padding-top: rem(170);
+	padding: rem(80) 0;
 }
 
 .introduction {
 	text-align: center;
-	margin-bottom: rem(-30);
 }
 
 .intro-image {
-	margin: 0 auto;
+	margin: rem(60) auto 0;
 	max-width: rem(1000);
 }
 
 .workspace {
 	width: 100%;
-	margin-bottom: rem(-6);
 }
 
